fix some css bugs

--- a/burak-vet/index.html
+++ b/burak-vet/index.html
@@ -20,14 +20,15 @@
         </div>
         <nav>
             <ul class="navul">
-                <li class="navlist"><a href="#section1" id="sect1" class="navlink ">Veterineriniz</a></li>
+                <li class="navlist"><a href="#section1" id="sect1" class="navlink">Veterineriniz</a></li>
                 <li class="navlist"><a href="#section2" id="sect2" class="navlink">Hizmetler</a></li>
                 <li class="navlist"><a href="#section3" id="sect3" class="navlink">Fiyatlandırma</a></li>
                 <li class="navlist"><a href="#section4" id="sect4" class="navlink ">İletişim</a></li>
             </ul>
         </nav>
     </header>
-    <div class="sidebar" aria-hidden="true">
+
+   <div class="sidebar" aria-hidden="true">
         <div class="slide-img-wrapper">
             <img src="./img/health-4385852_1280-min.jpg" alt="slayt fotoğrafı">
         </div>
@@ -98,7 +99,7 @@
                 <tr>
                     <th>Cerrahi Operasyon</th>
                     <td colspan="2">Ne verseniz kâr</td>
-
+                    
                 </tr>
                 <tr>
                     <th>Aşı</th>
@@ -120,12 +121,12 @@
                     <img src="./img/whatsapp.svg" alt="whatsapp logo">
                 </a>
             </div>
-            <div class="adress">
+            <address class="adress">
                 <p class="contact-title">Adres</p>
                 <p class="contact-info">Kızılay Sürüngen Sok. 77/77</p>
-            </div>
+            </address>
         </div>
-
+        
     </section>
     <aside>
         <div class="social-icons">
