add todo-app files

--- a/fmentor/index.html
+++ b/fmentor/index.html
@@ -26,6 +26,13 @@
         <a href="./static-job/">Projeyi Gör</a>
       </article>
 
+      <article>
+        <h2>ToDo App</h2>
+        <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass, Webpack, Babel</p>
+        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/todo-app-main">Kaynak Kod</a>
+        <a href="./todo-app/index.html">Projeyi Gör</a>
+      </article>
+
     </section>
   </main>
 </body>
