--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="https://github.com/gartun/front-endblog" class="source-code">Kaynak Kod</a>
           </li>
           <li class="content-li">
-            <a href="./fmentor/" class="content-link">&rightarrowtail;Frontend Mentor Projeleri</a>
+            <a href="./fmentor/index.html" class="content-link">&rightarrowtail;Frontend Mentor Projeleri</a>
           </li>
         </ul>
       </section>
