--- a/fmentor/todo-app/index.html
+++ b/fmentor/todo-app/index.html
@@ -66,7 +66,7 @@
 
     
     <p class="dragdrophint pale-text">
-      Listeyi düzenlemek için sürükle ve bırak (Intertent Explorer tarayıcısında çalışmaz)
+      Listeyi düzenlemek için sürükle ve bırak 
     </p>
   
   </main>
