--- a/fmentor/index.html
+++ b/fmentor/index.html
@@ -40,6 +40,13 @@
         <a href="./ip-tracker/index.html">Projeyi Gör</a>
       </article>
 
+      <article>
+        <h2>Hype Hiring Challenge</h2>
+        <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass</p>
+        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/case1">Kaynak Kod</a>
+        <a href="./hype-challenge/index.html">Projeyi Gör</a>
+      </article>
+
     </section>
   </main>
 </body>
