switch to sass from css for home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="container">
       <section class="intro-section show">
         <h1 class="name">Gökhan Artun kimdir?</h1>
         <div class="info-box">
