add select account to fmentor projects

--- a/fmentor/index.html
+++ b/fmentor/index.html
@@ -13,27 +13,6 @@
     <section>
 
       <article>
-        <h2>3 Column Card Component</h2>
-        <p><strong>Teknolojiler:</strong> HTML5, CSS3, Sass</p>
-        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/3-column-preview-card-component-main">Kaynak Kod</a>
-        <a href="./three-column/">Projeyi Gör</a>
-      </article>
-
-      <article>
-        <h2>Static Job Listing</h2>
-        <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass</p>
-        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/static-job-listings-master">Kaynak Kod</a>
-        <a href="./static-job/">Projeyi Gör</a>
-      </article>
-
-      <article>
-        <h2>ToDo App</h2>
-        <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass, Webpack, Babel</p>
-        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/todo-app-main">Kaynak Kod</a>
-        <a href="./todo-app/index.html">Projeyi Gör</a>
-      </article>
-
-      <article>
         <h2>IP Tracker</h2>
         <p><strong>Teknolojiler:</strong> TypeScript, HTML5, CSS3, Sass, Webpack, Babel</p>
         <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/ip-address-tracker-master">Kaynak Kod</a>
@@ -45,6 +24,34 @@
         <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass</p>
         <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/case1">Kaynak Kod</a>
         <a href="./hype-challenge/index.html">Projeyi Gör</a>
+      </article>
+
+      <article>
+        <h2>ToDo App</h2>
+        <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass, Webpack, Babel</p>
+        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/todo-app-main">Kaynak Kod</a>
+        <a href="./todo-app/index.html">Projeyi Gör</a>
+      </article>
+
+      <article>
+        <h2>Static Job Listing</h2>
+        <p><strong>Teknolojiler:</strong> JavaScript, HTML5, CSS3, Sass</p>
+        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/static-job-listings-master">Kaynak Kod</a>
+        <a href="./static-job/index.html">Projeyi Gör</a>
+      </article>
+
+      <article>
+        <h2>Select Account</h2>
+        <p><strong>Teknolojiler:</strong> HTML5, CSS3, Sass, PostCSS, AutoPrefixer, CssNano</p>
+        <a target="_blank" href="https://github.com/gartun/ui-design-daily/tree/master/select-account">Kaynak Kod</a>
+        <a href="./select-account/index.html">Projeyi Gör</a>
+      </article>
+
+      <article>
+        <h2>3 Column Card Component</h2>
+        <p><strong>Teknolojiler:</strong> HTML5, CSS3, Sass</p>
+        <a target="_blank" href="https://github.com/gartun/fmentor-challenges/tree/master/3-column-preview-card-component-main">Kaynak Kod</a>
+        <a href="./three-column/index.html">Projeyi Gör</a>
       </article>
 
     </section>
