--- a/kotufikir-yatirim/index.html
+++ b/kotufikir-yatirim/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Kaldıran Yatırım ile birlikte yatırım piyasaları ve yatırım araçları konusunda uzmanlaşın. Borsa hakkında öğrenmek istediğiniz her şey burada...">
+    <meta name="description" content="Kötüfikir Yatırım ile birlikte yatırım piyasaları ve yatırım araçları konusunda uzmanlaşın. Borsa hakkında öğrenmek istediğiniz her şey burada...">
     <title>Kötüfikir Yatırım | Hoş Geldiniz</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./css/index.css">
