finish restructuring ozgur cinefil with gulp

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="./fmentor/index.html" class="content-link">&rightarrowtail;Frontend Mentor Projeleri</a>
           </li>
           <li class="content-li">
-            <a href="./ozgur-cinefil/" class="content-link">&rightarrowtail; Özgür Cinefil</a>
+            <a href="./ozgur-cinefil/dist/home/index.html" class="content-link">&rightarrowtail; Özgür Cinefil</a>
             <span class="skills"> (HTML, CSS, JavaScript)</span>
             <a href="https://github.com/gartun/portfolio/tree/master/ozgur-cinefil" class="source-code">Kaynak Kod</a>
           </li>
