fix the sidebar slide burakvet

--- a/burak-vet/index.html
+++ b/burak-vet/index.html
@@ -130,9 +130,9 @@
     </section>
     <aside>
         <div class="social-icons">
-            <span class="social-icon"><img src="../ozgur-cinefil/img/twitter.svg" alt="twitter logo"></span>
-            <span class="social-icon"><img src="../ozgur-cinefil/img/instagram.svg" alt="instagram logo"></span>
-            <span class="social-icon"><img src="../ozgur-cinefil/img/youtube.svg" alt="youtube logo"></span>
+            <span class="social-icon"><img src="./img/twitter.svg" alt="twitter logo"></span>
+            <span class="social-icon"><img src="./img/instagram.svg" alt="instagram logo"></span>
+            <span class="social-icon"><img src="./img/youtube.svg" alt="youtube logo"></span>
         </div>
     </aside>
     <footer>
